Fix scrollbar for share modal

--- a/src/components/header/share-modal/index.css
+++ b/src/components/header/share-modal/index.css
@@ -1,3 +1,7 @@
+.share-content {
+  overflow: hidden;
+}
+
 .share-buttons,
 .share-button {
   display: flex;
